<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LogInActivity" >

    <TextView
        android:id="@+id/username_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_field"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="43dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_field"
        android:layout_below="@+id/username_caption"
        android:ems="15"
        android:hint="@string/enterUserName" />

    <TextView
        android:id="@+id/password_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/username_caption"
        android:layout_below="@+id/username_field"
        android:layout_marginTop="52dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_caption"
        android:layout_centerHorizontal="true"
        android:ems="15"
        android:hint="@string/enterPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:minWidth="94dp"
        android:onClick="goToHome"
        android:text="@string/login"
        android:width="180dp" />

    <TextView
        android:id="@+id/incorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:width="240dp" />

</RelativeLayout>